feat: add PUT /thirdpartyRequests/transactions/{id}/error
