# src/interface/api.yaml
@@ -26,67 +26,7 @@ paths:
                 description: Data model for the complex type object that contains an optional element ErrorInformation used along with 4xx and 5xx responses.
                 properties:
                   errorInformation:
-                    title: ErrorInformation
-                    type: object
-                    description: Data model for the complex type ErrorInformation.
-                    properties:
-                      errorCode:
-                        title: ErrorCode
-                        type: string
-                        pattern: '^[1-9]\d{3}$'
-                        description: |
-                          The API data type ErrorCode is a JSON String of four characters,
-                          consisting of digits only. Negative numbers are not allowed.
-                          A leading zero is not allowed. Each error code in the API is a
-                          four-digit number, for example, 1234, where the first number
-                          (1 in the example) represents the high-level error category,
-                          the second number (2 in the example) represents the low-level error category,
-                          and the last two numbers (34 in the example) represent the specific error.
-                        example: 5100
-                      errorDescription:
-                        title: ErrorDescription
-                        type: string
-                        minLength: 1
-                        maxLength: 128
-                        description: Error description string.
-                        example: This is an error description.
-                      extensionList:
-                        title: ExtensionList
-                        type: object
-                        description: |
-                          Data model for the complex type ExtensionList.
-                          An optional list of extensions, specific to deployment.
-                        properties:
-                          extension:
-                            type: array
-                            items:
-                              title: Extension
-                              type: object
-                              description: Data model for the complex type Extension.
-                              properties:
-                                key:
-                                  title: ExtensionKey
-                                  type: string
-                                  minLength: 1
-                                  maxLength: 32
-                                  description: Extension key.
-                                value:
-                                  title: ExtensionValue
-                                  type: string
-                                  minLength: 1
-                                  maxLength: 128
-                                  description: Extension value.
-                              required:
-                                - key
-                                - value
-                            minItems: 1
-                            maxItems: 16
-                            description: Number of Extension elements.
-                        required:
-                          - extension
-                    required:
-                      - errorCode
-                      - errorDescription
+                    $ref: '#/paths/~1thirdpartyRequests~1transactions~1%7BID%7D~1error/put/requestBody/content/application~1json/schema/properties/errorInformation'
           headers:
             Content-Length:
               required: false
@@ -307,6 +247,118 @@ paths:
       responses:
         '202':
           $ref: '#/paths/~1consents/post/responses/202'
+        '400':
+          $ref: '#/paths/~1health/get/responses/400'
+        '401':
+          $ref: '#/paths/~1health/get/responses/401'
+        '403':
+          $ref: '#/paths/~1health/get/responses/403'
+        '404':
+          $ref: '#/paths/~1health/get/responses/404'
+        '405':
+          $ref: '#/paths/~1health/get/responses/405'
+        '406':
+          $ref: '#/paths/~1health/get/responses/406'
+        '501':
+          $ref: '#/paths/~1health/get/responses/501'
+        '503':
+          $ref: '#/paths/~1health/get/responses/503'
+  '/thirdpartyRequests/transactions/{ID}/error':
+    put:
+      tags:
+        - thirdparty
+        - sampled
+      operationId: ThirdpartyTransactionRequestsError
+      parameters:
+        - $ref: '#/paths/~1consents~1%7BID%7D/put/parameters/0'
+        - $ref: '#/paths/~1consents/post/parameters/0'
+        - $ref: '#/paths/~1consents/post/parameters/1'
+        - $ref: '#/paths/~1consents/post/parameters/2'
+        - $ref: '#/paths/~1consents/post/parameters/3'
+        - $ref: '#/paths/~1consents/post/parameters/4'
+        - $ref: '#/paths/~1consents/post/parameters/5'
+        - $ref: '#/paths/~1consents/post/parameters/6'
+        - $ref: '#/paths/~1consents/post/parameters/7'
+        - $ref: '#/paths/~1consents/post/parameters/8'
+        - $ref: '#/paths/~1consents/post/parameters/9'
+        - $ref: '#/paths/~1consents/post/parameters/10'
+      requestBody:
+        description: Details of the error returned.
+        required: true
+        content:
+          application/json:
+            schema:
+              title: ErrorInformationObject
+              type: object
+              description: Data model for the complex type object that contains ErrorInformation.
+              properties:
+                errorInformation:
+                  title: ErrorInformation
+                  type: object
+                  description: Data model for the complex type ErrorInformation.
+                  properties:
+                    errorCode:
+                      title: ErrorCode
+                      type: string
+                      pattern: '^[1-9]\d{3}$'
+                      description: |
+                        The API data type ErrorCode is a JSON String of four characters,
+                        consisting of digits only. Negative numbers are not allowed.
+                        A leading zero is not allowed. Each error code in the API is a
+                        four-digit number, for example, 1234, where the first number
+                        (1 in the example) represents the high-level error category,
+                        the second number (2 in the example) represents the low-level error category,
+                        and the last two numbers (34 in the example) represent the specific error.
+                      example: 5100
+                    errorDescription:
+                      title: ErrorDescription
+                      type: string
+                      minLength: 1
+                      maxLength: 128
+                      description: Error description string.
+                      example: This is an error description.
+                    extensionList:
+                      title: ExtensionList
+                      type: object
+                      description: |
+                        Data model for the complex type ExtensionList.
+                        An optional list of extensions, specific to deployment.
+                      properties:
+                        extension:
+                          type: array
+                          items:
+                            title: Extension
+                            type: object
+                            description: Data model for the complex type Extension.
+                            properties:
+                              key:
+                                title: ExtensionKey
+                                type: string
+                                minLength: 1
+                                maxLength: 32
+                                description: Extension key.
+                              value:
+                                title: ExtensionValue
+                                type: string
+                                minLength: 1
+                                maxLength: 128
+                                description: Extension value.
+                            required:
+                              - key
+                              - value
+                          minItems: 1
+                          maxItems: 16
+                          description: Number of Extension elements.
+                      required:
+                        - extension
+                  required:
+                    - errorCode
+                    - errorDescription
+              required:
+                - errorInformation
+      responses:
+        '200':
+          $ref: '#/paths/~1health/get/responses/200'
         '400':
           $ref: '#/paths/~1health/get/responses/400'
         '401':
